--- a/.gitconfig
+++ b/.gitconfig
@@ -29,5 +29,6 @@
 	host = localhost
 	path = ~/myproject/git/mac/gnachman/iTerm2
 [gdif]
-    ignore = ./Scripts/AutoLaunch/move_current_tab.py 
-    ignore = ./build.sh
+    ignore = Scripts/AutoLaunch/move_current_tab.py 
+    ignore = build.sh
+    ignore = error
